--- a/apps/backend/.env
+++ b/apps/backend/.env
@@ -1,2 +1,4 @@
 DATABASE_URL=postgresql+psycopg://treaty:devpass@localhost:5432/treatydb
 PORT=8000
+STORAGE_DIR=storage
+ENCRYPTION_KEY=0BV0y61kzPVuvfcb9PCpOZEZETpnSy7bHXqL_HSxtSA=
