--- a/apps/backend/requirements.txt
+++ b/apps/backend/requirements.txt
@@ -4,3 +4,6 @@ SQLAlchemy==2.0.32
 psycopg[binary]==3.2.9
 pydantic==2.8.2
 python-dotenv==1.0.1
+python-multipart==0.0.20
+PyMuPDF==1.26.3
+cryptography==45.0.6
