--- a/apps/backend/.env
+++ b/apps/backend/.env
@@ -2,3 +2,5 @@ DATABASE_URL=postgresql+psycopg://treaty:devpass@localhost:5432/treatydb
 PORT=8000
 STORAGE_DIR=storage
 ENCRYPTION_KEY=0BV0y61kzPVuvfcb9PCpOZEZETpnSy7bHXqL_HSxtSA=
+API_KEY=dev-secret
+
